<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gateway3730</string>
    <string name="preference_name">Gateway3730 Config</string>
    <string name="action_reset">Reset</string>
    <string name="action_restart">Restart</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">help</string>
    <string name="action_exit">Exit</string>
    <string name="hello_world">Hello world!</string>
    <string name="error_security">You do not have read/write permission to the serial
		port.</string>
    <string name="error_unknown">The serial port can not be opened for an unknown
		reason.</string>
    <string name="reset">Reset</string>
    <string name="sensor_name">Name:</string>
    <string name="sensor_version">Version:</string>
    <string name="sensor_device_id">DeviceId:</string>
    <string name="sensor_manufac_info">ManufacInfo:</string>
    <string name="sensor_product_num">ProductNum:</string>
    <string name="sensor_channel_no">ChannelNo:</string>
    <string name="sensor_sample_start">开始采样</string>
    <string name="sensor_sample_stop">停止采样</string>
    <string name="sensor_sample_read_state">读取采样状态</string>
    <string name="sensor_sample_read_data">读取采样数据</string>
    <string name="sensor_sample_display_tem">温度</string>
    <string name="sensor_sample_display_hum">湿度</string>
    <string name="sensor_sample_display_light">光照</string>
    <string name="sensor_sample_display_triaxial_x">X轴</string>
    <string name="sensor_sample_display_triaxial_y">Y轴</string>
    <string name="sensor_sample_display_triaxial_z">Z轴</string>
    <string name="sensor_sample_display_current_double_1">通道一</string>
    <string name="sensor_sample_display_current_double_2">通道二</string>
    <string name="sensor_sample_display_voltage_four_1">通道一</string>
    <string name="sensor_sample_display_voltage_four_2">通道二</string>
    <string name="sensor_sample_display_voltage_four_3">通道三</string>
    <string name="sensor_sample_display_voltage_four_4">通道四</string>
    <string name="sensor_output_da1">DA通道输出一</string>
    <string name="sensor_output_da2">DA通道输出二</string>
    <string name="sensor_output_ir1">红外通道输出一</string>
    <string name="sensor_output_ir2">红外通道输出二</string>
    <string name="sensor_output_ir3">红外通道输出三</string>
    <string name="sensor_output_ir4">红外通道输出四</string>
    <string name="sensor_gpout1">GPOUT 1</string>
    <string name="sensor_gpout2">GPOUT 2</string>
    <string name="sensor_gpout3">GPOUT 3</string>
    <string name="sensor_gpout4">GPOUT 4</string>
    <!-- <string name="sensor_gpout1_on">GPOUT On</string> -->
    <!-- <string name="sensor_gpout1_off">GPOUT Off</string> -->
    <!-- <string name="sensor_gpout2_on">GPOUT2 On</string> -->
    <!-- <string name="sensor_gpout2_off">GPOUT2 Off</string> -->
    <!-- <string name="sensor_gpout3_on">GPOUT3 On</string> -->
    <!-- <string name="sensor_gpout3_off">GPOUT3 Off</string> -->
    <!-- <string name="sensor_gpout4_on">GPOUT4 On</string> -->
    <string name="sensor_gpin1_on">GPIN1 On</string>
    <string name="sensor_gpin1_off">GPIN1 Off</string>
    <string name="sensor_gpin2_on">GPIN2 On</string>
    <string name="sensor_gpin2_off">GPIN2 Off</string>
    <string name="sensor_gpin3_on">GPIN3 On</string>
    <string name="sensor_gpin3_off">GPIN3 Off</string>
    <string name="sensor_gpin4_on">GPIN4 On</string>
    <string name="sensor_gpin4_off">GPIN4 Off</string>
    <string name="sensor_output_ir_channel1">通道1</string>
    <string name="sensor_output_ir_channel2">通道2</string>
    <string name="sensor_output_ir_channel3">通道3</string>
    <string name="sensor_output_ir_channel4">通道4</string>
    <string name="sensor_output_ir_control_model">红外输出</string>
    <string name="sensor_output_ir_study_model">红外学习</string>
    <string name="sensor_output_ir_study_start">	红外学习开始		</string>
    <string name="sensor_output_ir_study_success">	红外学习成功		</string>
    <string name="sensor_output_ir_study_fail">		红外学习超时		</string>
    <string name="sensor_output_ir_studing">		红外正在学习		</string>
    <string name="sensor_output_ir_study_timer">计时器</string>
    <string name="gateway_config_udp">Udp Config</string>
    <string name="udp_host_ip_address">主机IP地址</string>
    <string name="udp_host_ip_address_default">192.168.1.100</string>
    <string name="udp_host_port_address">主机端口</string>
    <string name="udp_host_port_address_default">6800</string>
    <string name="udp_local_port">本地端口</string>
    <string name="udp_local_port_default">1025</string>
    <string name="gateway_config">Gateway Config</string>
    <string name="init_channel_num">初始信道</string>
    <string name="init_channel_num_default">25</string>
    <string name="panid">PANID</string>
    <string name="panid_default">2014</string>
    <string name="product_num">Product Number</string>
    <string name="product_num_default">010203</string>
    <string name="preference_err_digit">必须为数字</string>
    <string name="preference_err_ip">Ip错误</string>
    <string name="preference_err_port">port错误</string>
    <string name="preference_err_channel">Channel错误</string>
    <string name="preference_err_panid">PanId错误</string>
    <string name="progress_dialog_info">正在进行配置......</string>

</resources>